wip: read alert

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -53,6 +53,8 @@
     --brand-violetAccent04: 264 100% 80%;
     --brand-skyblue: 188 80% 48%;
     --brand-danger: 0 100% 50%;
+
+    --new-primary: 268, 100%, 80%;
   }
 
   .dark {
